Add OR filtering to repository layer